--- a/index.html
+++ b/index.html
@@ -3,8 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <title>3dAngryBirds</title>
+
+    <script type="text/javascript" src="libs/three.min.js"></script>
+    <script type="text/javascript" src="libs/physi.js"></script>
+    <script type="text/javascript" src="libs/keyboard.js"></script>
+
+    <!--helpers js-->
+    <script type="text/javascript" src="js/objects.js"></script>
+    <script type="text/javascript" src="js/controls.js"></script>
+
 </head>
 <body>
+<div id="viewport"></div>
+
+<script src="js/3dAngryBirds.js"></script>
+
+<!--<script type="text/javascript"></script>-->
+<!--<script>-->
+
+    <!--'use strict';-->
+
+    <!--Physijs.scripts.worker = 'libs/physijs_worker.js';-->
+    <!--Physijs.scripts.ammo = './ammo.js';-->
+
+    <!--var initScene, render, renderer, scene, camera, box;-->
+
+    <!--initScene = function() {-->
+        <!--renderer = new THREE.WebGLRenderer({ antialias: true });-->
+        <!--renderer.setSize( window.innerWidth, window.innerHeight );-->
+        <!--document.getElementById( 'viewport' ).appendChild( renderer.domElement );-->
+
+        <!--scene = new Physijs.Scene;-->
+
+        <!--camera = new THREE.PerspectiveCamera(-->
+            <!--35,-->
+            <!--window.innerWidth / window.innerHeight,-->
+            <!--1,-->
+            <!--1000-->
+        <!--);-->
+        <!--camera.position.set( 60, 50, 60 );-->
+        <!--camera.lookAt( scene.position );-->
+        <!--scene.add( camera );-->
+
+        <!--// Box-->
+        <!--box = new Physijs.BoxMesh(-->
+            <!--new THREE.CubeGeometry( 5, 5, 5 ),-->
+            <!--new THREE.MeshBasicMaterial({ color: 0x888888 })-->
+        <!--);-->
+        <!--scene.add( box );-->
+
+        <!--requestAnimationFrame( render );-->
+    <!--};-->
+
+    <!--render = function() {-->
+        <!--scene.simulate(); // run physics-->
+        <!--renderer.render( scene, camera); // render the scene-->
+        <!--requestAnimationFrame( render );-->
+    <!--};-->
+
+    <!--window.onload = initScene();-->
+<!--</script>-->
 
 </body>
 </html>
